# Catenaccio

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx
app/api/stream/: route.ts
components/: AnimatedNumber.tsx  Celebration.tsx  Dashboard.tsx  HeroArt.tsx  Landing.tsx  Logo.tsx  Pitch3D.tsx  SensitivityChart.tsx  Sparkline.tsx  useLiveEngine.ts  useReplayEngine.ts
data/: real-odds-capture.json
docs/: DEMO.md  live-run.txt  onchain-proof.txt
lib/arena/: arena.ts
lib/engine/: courtsiding.ts  engine.ts  merkle.ts  quote.ts  replay.ts  risk.ts  signals.ts  simulate.ts  types.ts
lib/engine/math/: model.ts  sha256.ts
lib/onchain/: settlement.ts  solana.ts
lib/txline/: auth.ts  normalize.ts  sse.ts
mcp/: server.ts
onchain/: README.md
onchain/programs/catenaccio_log/src/: lib.rs
scripts/: agent.ts  anchor.ts  arena.ts  backtest.ts  live.ts  replay-real.ts  subscribe.ts  sweep.ts  verify.ts
sharp-detector/: Cargo.toml  README.md
sharp-detector/src/: main.rs
tests/: arena.test.ts  courtsiding.test.ts  crypto.test.ts  engine.test.ts  model.test.ts  settlement.test.ts
